--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Fasthand&family=Kalam&family=Raleway:ital,wght@1,600&display=swap');
+
 :root {
+  --dark-background: #002d52;
+  --liberty: #4a5899;
+  --pale-silver: #ccc1bd;
+  --blue-green: #5eacc0;
+  --berry: #a7679d;
+  --solid-pink: #ac455e;
   --primary: #ff9f1c;
   --secondary: #011627;
   --tertiary: #b2c2c1;
@@ -26,12 +34,12 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Inconsolata', monospace;
+  font-family: 'Kalam', cursive;
   font-weight: 400;
   line-height: 1.5;
   font-size: 20px;
-  color: var(--dark);
-  background-color: #f3fffee1;
+  color: var(--pale-silver);
+  background-color: var(--pale-silver);
 }
 
 h1,
@@ -40,7 +48,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Karla', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   margin: 5px 0;
   line-height: 1.25;
@@ -55,7 +63,8 @@ h2 {
 }
 
 h3 {
-  text-shadow: 1px 1px 1px var(--secondary);
+  color: var(--berry);
+  text-shadow: 1px 1px 1px var(--dark-background);
   font-size: 1.75rem;
 }
 
@@ -77,7 +86,7 @@ p {
 }
 
 a {
-  color: var(--dark);
+  color: var(--light);
   text-decoration: none;
 }
 
@@ -93,12 +102,17 @@ nav {
 nav a {
   padding: 6px 10px;
   margin: 0 15px;
-  transition: all 0.2s;
+  transition: all 0.5s;
 }
 
 nav a:hover {
-  color: var(--secondary);
-  background-color: var(--dark);
+  color: var(--berry);
+  background-color: var(--pale-silver);
+  border-radius: 25px;
+}
+
+.header-text {
+  font-family: 'Fasthand', cursive;
 }
 
 .page-title {
@@ -110,22 +124,23 @@ nav a:hover {
 
 .btn,
 .pill {
+  font-family: 'Kalam', cursive;
   font-size: 1.3rem;
   text-decoration: none;
   padding: 0.5rem 1.2rem;
   margin: 5px 0;
   border-radius: var(--border-radius);
   border: none;
-  color: var(--dark);
+  color: var(--blue-green);
   outline: none;
-  background-color: var(--secondary);
+  background-color: var(--dark-background);
   transition: all 0.5s;
 }
 
 .btn:hover,
 .pill:hover {
-  color: var(--secondary);
-  background-color: var(--dark);
+  color: var(--solid-pink);
+  background-color: var(--blue-green);
 }
 
 .btn-inline {
@@ -135,24 +150,31 @@ nav a:hover {
 /* CARDS */
 .card {
   margin: 0 0 20px 0;
-  border: 3px solid var(--secondary);
+  border: 3px solid var(--dark-background);
   border-radius: var(--border-radius);
-  background-color: var(--light);
-  color: var(--dark);
+  background: var(--dark-background);
+  color: var(--berry);
+  opacity: 0.95;
 }
 
 .card-header {
-  color: var(--quatrinary);
+  font-family: 'Kalam', cursive;
+  color: var(--blue-green);
   margin: 0;
-  background-color: var(--secondary);
+  background-color: var(--dark-background);
   padding: 0.625rem;
   border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
 }
 
 .card-body {
-  color: var(--secondary);
+  background-color: var(--dark-background);
+  color: var(--berry);
   padding: 2.5%;
   font-size: 1.4rem;
+}
+
+.friends {
+  border-radius: var(--border-radius);
 }
 
 /* FORM */
@@ -172,8 +194,17 @@ nav a:hover {
   padding: 0.75rem;
   margin: 0.2rem 0;
   font-size: 1.2rem;
-  border: 2px solid var(--dark);
+  border: 2px solid var(--liberty);
   border-radius: var(--border-radius);
+}
+
+.form-input:focus {
+  outline: none !important;
+  border-color: var(--solid-pink);
+}
+
+::placeholder {
+  color: rgb(255, 255, 255, .8);
 }
 
 [type='radio']:checked,
@@ -188,7 +219,7 @@ nav a:hover {
   cursor: pointer;
   line-height: 20px;
   display: inline-block;
-  color: var(--secondary);
+  color: var(--dark-background);
   margin-right: 0.2rem;
 }
 
@@ -200,16 +231,16 @@ nav a:hover {
   top: 0;
   width: 18px;
   height: 18px;
-  border: 2px solid var(--secondary);
+  border: 2px solid var(--dark-background);
   border-radius: 100%;
-  background: #fff;
+  background: (--light);
 }
 [type='radio']:checked + label:after,
 [type='radio']:not(:checked) + label:after {
   content: '';
   width: 12px;
   height: 12px;
-  background-color: var(--secondary);
+  background-color: var(--dark-background);
   position: absolute;
   top: 5px;
   left: 5px;
@@ -750,11 +781,11 @@ nav a:hover {
 }
 
 .text-primary {
-  color: var(--primary);
+  color: var(--pale-silver);
 }
 
 .text-secondary {
-  color: var(--secondary);
+  color: var(--dark-background);
 }
 
 .text-tertiary {
@@ -783,7 +814,7 @@ nav a:hover {
 }
 
 .bg-secondary {
-  background-color: var(--secondary);
+  background-color: var(--dark-background);
 }
 
 .bg-tertiary {
@@ -791,7 +822,7 @@ nav a:hover {
 }
 
 .bg-light {
-  background-color: var(--light);
+  background-color: var(--pale-silver);
 }
 
 .bg-dark {
